# P1Portfolio_Adriana_Lucena

./: CMakeLists.txt
Aufgabe1-Pap/: Aufgabe1.cpp  CMakeLists.txt
Aufgabe2-Sprite/: Aufgabe2.cpp  CMakeLists.txt  Sprite.cpp  Sprite.h
Aufgabe3-Wuerfelspiel/: Aufgabe3.cpp  CMakeLists.txt  Functions.cpp  Functions.h
Aufgabe4-Pflanzenklassen/: Aufgabe4.cpp  CMakeLists.txt  Flower.cpp  Flower.h  Grass.cpp  Grass.h  Plant.cpp  Plant.h  Shrub.cpp  Shrub.h  Tree.cpp  Tree.h  mainFunctions.cpp  mainFunctions.h
Aufgabe5-CustomDynamicArray/: Aufgabe5.cpp  CMakeLists.txt  MyCppArray.cpp  MyCppArray.h
Aufgabe5a-CustomDynamicArray/: Aufgabe5a.cpp  CMakeLists.txt  MyCppArray.cpp  MyCppArray.h
Aufgabe5b-CustomDynamicArray/: Aufgabe5b.cpp  CMakeLists.txt  MyCppArray.cpp  MyCppArray.h
Aufgabe6-Auto/: Aufgabe6.cpp  BMW.cpp  BMW.h  BaseCar.cpp  BaseCar.h  Brakes.h  BrakesDragonV2.h  BrakesDuratecV1.cpp  BrakesDuratecV1.h  Breaks.cpp  Breaks.h  CMakeLists.txt  Engine.cpp  Engine.h  EngineDragonV2.cpp  EngineDragonV2.h  EngineDuratecV1.cpp  EngineDuratecV1.h  EngineVariantOne.cpp  EngineVariantOne.h  EngineVariantTwo.cpp  EngineVariantTwo.h  Ford.cpp  Ford.h  Frame.cpp  Frame.h  FrameDragonV2.h  FrameDuratecV1.cpp  FrameDuratecV1.h  Gears.cpp  Gears.h  GearsDragonV2.h  GearsDuratecV1.cpp  GearsDuratecV1.h  Suspension.cpp  Suspension.h  SuspensionDragonV2.cpp  SuspensionDragonV2.h  SuspensionDuratecV1.cpp  SuspensionDuratecV1.h  (+7 more)
Aufgabe6-Auto/CarComponents/Brakes/: Brakes.cpp  Brakes.h  BrakesDragonV2.cpp  BrakesDragonV2.h  BrakesDuratecV1.h
Aufgabe6-Auto/CarComponents/Engines/: Engine.cpp  EngineDuratecV1.h
Aufgabe6-Auto/CarComponents/Frames/: Frame.cpp  Frame.h  FrameDragonV2.cpp  FrameDragonV2.h  FrameDuratecV1.h
Aufgabe6-Auto/CarComponents/Gears/: Gears.h  GearsDragonV2.cpp  GearsDragonV2.h  GearsDuratecV1.h
Aufgabe6-Auto/CarComponents/Suspensions/: Suspension.cpp  Suspension.h  SuspensionDragonV2.h  SuspensionDuratecV1.h
Aufgabe6-Auto/CarComponents/Wheels/: Wheel.h  WheelDragonV2.cpp  WheelDragonV2.h  WheelDuratecV1.h
Aufgabe6-Auto/Cars/: BaseCar.cpp  BaseCar.h  Ford.cpp  Ford.h
Aufgabe7-RaylibSpriteKlasse/: Aufgabe7.cpp  CMakeLists.txt  Sprite.cpp
Aufgabe8-LevelKlasse/: Asteroid.cpp  Asteroid.h  Aufgabe8.cpp  BaseSprite.cpp  BaseSprite.h  CMakeLists.txt  Cookie.cpp  Cookie.h  CookieCrumb.cpp  CookieCrumb.h  CookieCrumbs.cpp  CookieCrumbs.h  Level.cpp  Level.h  Sprite.h  utilities.cpp  utilities.h  utilitiyFunctions.cpp  utilitiyFunctions.h  utilityClasses.cpp  utilityClasses.h
src/: CMakeLists.txt  main.cpp
