cmake_minimum_required (VERSION 3.11)

project(P1Portfolio_Adriana_Lucena)

add_subdirectory ("src")
add_subdirectory ("Aufgabe1-Pap")
add_subdirectory ("Aufgabe2-Sprite")
add_subdirectory ("Aufgabe3-Wuerfelspiel")
add_subdirectory ("Aufgabe4-Pflanzenklassen")
add_subdirectory ("Aufgabe5a-CustomDynamicArray")
add_subdirectory ("Aufgabe5b-CustomDynamicArray")
add_subdirectory ("Aufgabe6-Auto")
add_subdirectory ("Aufgabe7-RaylibSpriteKlasse")
add_subdirectory ("Aufgabe8-LevelKlasse")