add_executable(Aufgabe6 Aufgabe6.cpp
        BaseCar.cpp
        BaseCar.h
        Breaks.cpp
        Breaks.h
        Engine.cpp
        Engine.h
        EngineVariantOne.cpp
        EngineVariantOne.h
        EngineVariantTwo.cpp
        EngineVariantTwo.h
        Frame.cpp
        Frame.h
        Gears.cpp
        Gears.h
        Suspension.cpp
        Suspension.h
        Wheel.cpp
        Wheel.h)