add_executable(Aufgabe6 Aufgabe6.cpp
        Cars/BaseCar.cpp
        Cars/BaseCar.h
        CarComponents/Brakes/Brakes.cpp
        CarComponents/Brakes/Brakes.h
        CarComponents/Engines/Engine.cpp
        CarComponents/Engines/Engine.h
        CarComponents/Engines/EngineDuratecV1.cpp
        CarComponents/Engines/EngineDuratecV1.h
        CarComponents/Engines/EngineDragonV2.cpp
        CarComponents/Engines/EngineDragonV2.h
        CarComponents/Frames/Frame.cpp
        CarComponents/Frames/Frame.h
        CarComponents/Gears/Gears.cpp
        CarComponents/Gears/Gears.h
        CarComponents/Suspensions/Suspension.cpp
        CarComponents/Suspensions/Suspension.h
        CarComponents/Wheels/Wheel.cpp
        CarComponents/Wheels/Wheel.h
        CarComponents/Brakes/BrakesDuratecV1.cpp
        CarComponents/Brakes/BrakesDuratecV1.h
        CarComponents/Brakes/BrakesDragonV2.cpp
        CarComponents/Brakes/BrakesDragonV2.h
        CarComponents/Frames/FrameDuratecV1.cpp
        CarComponents/Frames/FrameDuratecV1.h
        CarComponents/Frames/FrameDragonV2.cpp
        CarComponents/Frames/FrameDragonV2.h
        CarComponents/Gears/GearsDuratecV1.cpp
        CarComponents/Gears/GearsDuratecV1.h
        CarComponents/Gears/GearsDragonV2.cpp
        CarComponents/Gears/GearsDragonV2.h
        CarComponents/Suspensions/SuspensionDuratecV1.cpp
        CarComponents/Suspensions/SuspensionDuratecV1.h
        CarComponents/Suspensions/SuspensionDragonV2.cpp
        CarComponents/Suspensions/SuspensionDragonV2.h
        CarComponents/Wheels/WheelDuratecV1.cpp
        CarComponents/Wheels/WheelDuratecV1.h
        CarComponents/Wheels/WheelDragonV2.cpp
        CarComponents/Wheels/WheelDragonV2.h
        Cars/Ford.cpp
        Cars/Ford.h)
