cmake_minimum_required(VERSION 3.24)
set(CMAKE_POLICY_DEFAULT_CMP0079 NEW)

add_executable(Aufgabe6 Aufgabe6.cpp
        BaseCar.cpp
        BaseCar.h
        Brakes.cpp
        Brakes.h
        Engine.cpp
        Engine.h
        EngineDuratecV1.cpp
        EngineDuratecV1.h
        EngineDragonV2.cpp
        EngineDragonV2.h
        Frame.cpp
        Frame.h
        Gears.cpp
        Gears.h
        Suspension.cpp
        Suspension.h
        Wheel.cpp
        Wheel.h
        BrakesDuratecV1.cpp
        BrakesDuratecV1.h
        BrakesDragonV2.cpp
        BrakesDragonV2.h
        FrameDuratecV1.cpp
        FrameDuratecV1.h
        FrameDragonV2.cpp
        FrameDragonV2.h
        GearsDuratecV1.cpp
        GearsDuratecV1.h
        GearsDragonV2.cpp
        GearsDragonV2.h
        SuspensionDuratecV1.cpp
        SuspensionDuratecV1.h
        SuspensionDragonV2.cpp
        SuspensionDragonV2.h
        WheelDuratecV1.cpp
        WheelDuratecV1.h
        WheelDragonV2.cpp
        WheelDragonV2.h
        Ford.cpp
        Ford.h
        BMW.cpp
        BMW.h
        mainFunctions.cpp
        mainFunctions.h)



